@@ -1,5 +1,6 @@
 0.11.21
  - fix: reduce progress print statements in dcoraid-upload-task CLI
+ - enh: check for visibility before updating GUI widgets with QTimer
 0.11.20
  - setup: bump dclab from 0.48.2 to 0.48.4
 0.11.19
